# umbrel-balancebridge

android-balancebridge-mvp/: settings.gradle.kts
android-balancebridge-mvp/app/: build.gradle.kts
android-balancebridge-mvp/app/src/androidTest/java/com/nomadwallet/balancebridge/mvp/: ExampleInstrumentedTest.kt
android-balancebridge-mvp/app/src/main/: AndroidManifest.xml
android-balancebridge-mvp/app/src/main/java/com/nomadwallet/balancebridge/: BitcoinInputValidator.kt  NostrManager.kt  NostrRelayConfig.kt  PairingData.kt  PairingStore.kt  QrScanActivity.kt
android-balancebridge-mvp/app/src/main/java/com/nomadwallet/balancebridge/mvp/: MainActivity.kt
android-balancebridge-mvp/app/src/main/java/com/nomadwallet/balancebridge/mvp/ui/: BitcoinLookupScreen.kt  BitcoinResultsScreen.kt
android-balancebridge-mvp/app/src/main/java/com/nomadwallet/balancebridge/mvp/ui/theme/: Color.kt  Theme.kt  Type.kt
android-balancebridge-mvp/app/src/main/res/values/: strings.xml  themes.xml
android-balancebridge-mvp/app/src/main/res/xml/: network_security_config.xml
android-balancebridge-mvp/app/src/test/java/com/nomadwallet/balancebridge/mvp/: ExampleUnitTest.kt
android-balancebridge-mvp/gradle/wrapper/: gradle-wrapper.properties
app/server/: Cargo.toml
app/server/src/: electrs.rs  lib.rs  main.rs  nostr.rs  nostr_handler.rs  relays.rs
umbrel-balancebridge/: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  TEST_PLAN.md  app-store.json
umbrel-balancebridge/app/server/: Cargo.toml  README.md
umbrel-balancebridge/app/server/src/: config.rs  electrs.rs  error.rs  identity.rs  lib.rs  main.rs  nostr_handler.rs  pairing.rs  protocol.rs  qr.rs  relays.rs  xpub.rs
umbrel-balancebridge/app/ui/: README.md
umbrel-balancebridge/protocol/: README.md
umbrel-balancebridge/umbrel/: app.yml
