[package]
name = "balancebridge-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "balancebridge-server"
path = "src/main.rs"

[dependencies]
# Nostr
nostr-sdk = "0.44"
nostr = "0.33"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# QR code generation
qrcode = "0.14"
image = { version = "0.24", features = ["png", "png-encoding"] }

[dev-dependencies]

