[package]
name = "balancebridge-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "balancebridge-server"
path = "src/main.rs"

[dependencies]
# Nostr
nostr-sdk = "0.44"
nostr = "0.44"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"

# Hex encoding/decoding
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# QR code generation
qrcode = "=0.12.0"

# Bitcoin address and xpub handling
bitcoin = { version = "0.32", features = ["std", "base64"] }
bip32 = "0.5"

# Electrum client for Electrs (TCP)
electrum-client = "0.21"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Force base64ct to stable version (avoids edition2024 requirement)
base64ct = "<1.8"

# TLS/crypto providers (force ring, disable aws-lc-rs)
rustls = { version = "0.23", features = ["ring"], default-features = false }
tokio-rustls = { version = "0.26", features = ["ring"], default-features = false }

[features]
default = []


[dev-dependencies]

